add jvm opt